--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/CardView.Light"
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,7 +19,7 @@
             android:layout_height="0dp"
             android:adjustViewBounds="false"
             android:scaleType="fitXY"
-            android:src="@drawable/newworldmakati"
+            android:src="@drawable/santorini"
             app:layout_constraintBottom_toTopOf="@+id/supporting_text"
             app:layout_constraintDimensionRatio="H,16:11.5"
             app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +39,7 @@
             android:layout_marginTop="16dp"
             android:gravity="center"
             android:lineSpacingExtra="8dp"
-            android:text="New World Makati Hotel"
+            android:text="Santorini"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="@android:color/black"
             android:textSize="20dp"
@@ -60,7 +61,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/supporting_text"
             app:layout_constraintTop_toBottomOf="@+id/supporting_text"
-            app:layout_constraintVertical_bias="0.216" />
+            app:layout_constraintVertical_bias="0.105" />
 
         <TextView
             android:id="@+id/txt_loc2"
@@ -69,7 +70,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:gravity="right"
-            android:text="Esperanza St., Ayala Center, Makati"
+            android:text="Fira, Santorini, Cyclades, South Aegean, Greece"
             android:textColor="@android:color/black"
             android:textSize="15dp"
             android:textStyle="bold"
@@ -100,7 +101,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:gravity="right"
-            android:text="11.1 KM"
+            android:text="16, 152 KM"
             android:textColor="@android:color/black"
             android:textSize="16dp"
             android:textStyle="bold"
